# rocket-juniper-diesel-base

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2019-11-19-175404_create_users/: up.sql
migrations/2019-11-19-175714_create_groups/: up.sql
migrations/2019-11-19-175716_create_events/: up.sql
src/: db.rs  lib.rs  routes.rs
src/database/: models.rs  schema.rs
src/graphql/: mod.rs  schema.rs
