[package]
name = "base"
version = "0.0.1"
authors = ["Torben Carstens <rustjuniperdieselbase@carstens.tech>"]
edition = "2018"
rust = "nightly"

[lib]
path = "src/lib.rs"
name = "base"

[[bin]]
path = "src/bin/main.rs"
name = "base"

[dependencies]
dotenv = "0.15.0"
juniper = "0.14.1"
juniper_rocket = "0.5.1"

[dependencies.rocket]
version = "0.4.2"
features = []
default-features = false

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["diesel_postgres_pool"]
default-features = false

[dependencies.diesel]
version = "1.4.3"
features = ["postgres"]
default-features = false
